<?xml version="1.0"?>
<package format="2">
  <name>odometry_calibration</name>
  <version>1.0.0</version>
  <description>The tools package</description>
  <maintainer email="puru@mowito.in">puru rastogi</maintainer>
  <license>Properitory</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
